<resources>
    <string name="landing_descripcion">GymApp es la aplicacion que te permite llevar el control de tu gimnasio,
        gestionando los sesiones de las sesiones de entrenamiento para cada cliente.
    </string>
    <string name="app_name">GymApp</string>
    <string name="usernameText">Nombre de usuario</string>
    <string name="passwordText">Contraseña</string>
    <string name="loginText">LOGIN</string>
    <string name="signupText">SIGN UP</string>
    <string name="passwordAgainText">Contraseña, de nuevo</string>
    <string name="nameText">Nombre</string>
    <string name="lastNameText">Apellido</string>
    <string name="orText">O, si no tienes ninguna cuenta</string>
    <string name="addressText">Dirección</string>
    <string name="entrenadores">Entrenadores</string>
    <string name="clientes">Clientes</string>
    <string name="machinesText">Máquinas</string>
    <string name="sesionesText">Sesiones</string>
    <string name="homeText">Home</string>
    <string name="search">BUSCAR</string>
    <string name="identificacion">Número de identificación</string>
    <string name="fecha_nacimiento">Fecha de nacimiento</string>
    <string name="peso">Peso</string>
    <string name="estatura">Estatura</string>
    <string name="guardar">GUARDAR</string>
    <string name="limpiar">LIMPIAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="crear_cliente">Nuevo Cliente</string>
    <string name="cliente_guardado">Cliente guardado!</string>
    <string name="entrenador_guardado">Entrenador guardado!</string>
    <string name="editar">Editar</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="confirmacion">Confirmación</string>
    <string name="seguro_de_eliminar">¿Está seguro(a) de eliminar el elemento?</string>
    <string name="editar_cliente">Editar Cliente</string>
    <string name="editar_entrenador">Editar Entrenador</string>
    <string name="crear_entrenador">Nuevo Entrenador</string>
    <string name="hora_inicio">Inicio</string>
    <string name="hora_fin">Fin</string>
    <string name="sesiones">@string/sesionesText</string>
    <string name="crear_sesion">Nueva Sesion</string>
    <string name="editar_sesion">Editar Sesion</string>
    <string name="sesion_guardado">Sesion guardada!</string>
    <string name="cliente">Cliente</string>
    <string name="entrenador">Entrenador</string>
    <string name="completada">Completada</string>
    <string name="genero">Género</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="llene_campos">Llene todos los campos, por favor.</string>
</resources>
