<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.edu.cuc.gymapp.SignupActivity">

    <LinearLayout android:layout_width="match_parent"
                  android:orientation="vertical"
                  android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout android:id="@+id/firstNameSignupLayout"
                                                       android:layout_width="match_parent"
                                                       android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText android:id="@+id/firstNameSignupInput"
                                                             android:layout_width="match_parent"
                                                             android:layout_height="match_parent"
                                                             android:hint="@string/nameText"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:id="@+id/lastNameSignupLayout"
                                                       android:layout_width="match_parent"
                                                       android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText android:id="@+id/lastNameSignupInput"
                                                             android:layout_width="match_parent"
                                                             android:layout_height="match_parent"
                                                             android:hint="@string/lastNameText"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:id="@+id/addressSignupLayout"
                                                       android:layout_width="match_parent"
                                                       android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText android:id="@+id/addressSignupInput"
                                                             android:layout_width="match_parent"
                                                             android:layout_height="match_parent"
                                                             android:hint="@string/addressText"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:id="@+id/passwordSignupLayout"
                                                       android:layout_width="match_parent"
                                                       android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText android:id="@+id/passwordSignupAgainInput"
                                                             android:layout_width="match_parent"
                                                             android:layout_height="match_parent"
                                                             android:hint="@string/passwordText"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:id="@+id/passwordSignupAgainLayout"
                                                       android:layout_width="match_parent"
                                                       android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText android:id="@+id/passwordSignupInput"
                                                             android:layout_width="match_parent"
                                                             android:layout_height="match_parent"
                                                             android:hint="@string/passwordAgainText"/>
        </android.support.design.widget.TextInputLayout>

        <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                android:backgroundTint="@color/login" android:text="@string/signupText"
                android:id="@+id/signupButton"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>

    </LinearLayout>

</ScrollView>
