<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                    android:id="@+id/customHorarioCardview"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="2dp"
                                    android:background="@color/cardview_light_background"
                                    card_view:cardCornerRadius="2dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center_vertical">

        <LinearLayout android:id="@+id/linearLayout"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content" android:orientation="vertical">
            <TextView
                android:id="@+id/horaInicioTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="- -"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/primary_text"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" android:text="@string/hora_inicio"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:id="@+id/horaFinTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="- - "
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hora_fin"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

        </LinearLayout>

        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_alignParentEnd="true" android:layout_centerVertical="true"
                      android:orientation="horizontal">

            <Button
                android:id="@+id/editarHorarioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/accent"
                android:text="@string/editar" android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/eliminarHorarioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/cancel"
                android:text="@string/eliminar"
                android:textColor="@android:color/white"/>
        </LinearLayout>


    </RelativeLayout>

</android.support.v7.widget.CardView>
