<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay.Dark">

        <android.support.v7.widget.Toolbar
            android:id="@+id/crearHorarioToolbar"
            style="@style/AppTheme.AppBarOverlay.Dark"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primary"/>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView android:layout_width="match_parent"
                                                android:layout_height="match_parent"
                                                android:fillViewport="true"
                                                app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical"
                      android:padding="16dp">

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/hora_inicio"/>

            <Spinner android:id="@+id/opcionesHoraInicio"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:layout_marginTop="10dp" android:text="@string/hora_fin"/>

            <Spinner android:id="@+id/opcionesHoraFin"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnAgregarHorario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/login"
                    android:text="@string/guardar"
                    android:textColor="#ffffff"/>

                <Button
                    android:id="@+id/btnCancelarHorario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/cancel"
                    android:text="@string/cancelar"
                    android:textColor="#ffffff"/>

            </LinearLayout>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>