<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                    android:id="@+id/customHorarioCardview"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="2dp"
                                    android:background="@color/cardview_light_background"
                                    card_view:cardCornerRadius="2dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/horaInicioTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="- -" android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/primary_text"/>

        <TextView
            android:id="@+id/horaFinTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="- - " android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_centerVertical="true" android:layout_toStartOf="@+id/eliminarHorarioButton"
            android:layout_marginEnd="46dp"/>
        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/horaInicioTextView" android:text="@string/hora_inicio"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hora_fin"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignTop="@+id/textView3"
            android:layout_alignEnd="@+id/horaFinTextView"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editar"
            android:backgroundTint="@color/accent"
            android:textColor="@android:color/white"
            android:id="@+id/editarHorarioButton"
            android:layout_alignBottom="@+id/textView4" android:layout_alignParentEnd="true"/>

        <Button
            android:backgroundTint="@color/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eliminar"
            android:textColor="@android:color/white"
            android:id="@+id/eliminarHorarioButton"
            android:layout_alignTop="@+id/editarHorarioButton" android:layout_toStartOf="@+id/editarHorarioButton"/>


    </RelativeLayout>

</android.support.v7.widget.CardView>
