<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/background_splash"
    tools:context="co.edu.cuc.gymapp.LoginActivity">


    <RelativeLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:background="#9f000000"
                  android:paddingBottom="@dimen/activity_vertical_margin"
                  android:paddingLeft="@dimen/activity_horizontal_margin"
                  android:paddingRight="@dimen/activity_horizontal_margin"
                  android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout android:id="@+id/usernameLoginLayout"
                                                       android:layout_width="match_parent"
                                                       android:textColorHint="@color/login"
                                                       android:layout_height="wrap_content"
                                                       android:layout_above="@+id/passwordLoginLayout"
                                                       android:layout_alignParentStart="true">

            <android.support.design.widget.TextInputEditText android:id="@+id/usernameLoginInput"
                                                             android:layout_width="match_parent"
                                                             android:textColor="@android:color/white"
                                                             android:layout_height="match_parent"
                                                             android:hint="@string/usernameText"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:id="@+id/passwordLoginLayout"
                                                       android:textColorHint="@color/login"
                                                       android:layout_width="match_parent"
                                                       android:layout_height="wrap_content"
                                                       android:layout_centerVertical="true"
                                                       android:layout_alignParentEnd="true">

            <android.support.design.widget.TextInputEditText android:id="@+id/passwordLoginInput"
                                                             android:inputType="textPassword"
                                                             android:textColor="@android:color/white"
                                                             android:textColorHint="@color/icons"
                                                             android:layout_width="match_parent"
                                                             android:layout_height="match_parent"
                                                             android:hint="@string/passwordText"/>
        </android.support.design.widget.TextInputLayout>

        <Button android:id="@+id/loginButton" android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/login"
                android:text="@string/loginText"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_below="@+id/passwordLoginLayout"
                android:layout_alignParentStart="true"/>

    </RelativeLayout>


</RelativeLayout>
